--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "discord.js": "^14.11.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
+  },
+  "engines": {
+  "node": "16.x"
   }
 }
